Trocando articule por form

--- a/ExercicioFormulario/index.html
+++ b/ExercicioFormulario/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <article class="formulario">
+    <form class="formulario">
         <h1 class="texto_formulario">Seja Sócio </h1> <!--Nome do formulario -->
 <!-- Campo Nome -->
         <label 
@@ -71,6 +71,6 @@
        placeholder="Endereço Completo">
        
        <input type="button" class="botao" value="Inscrever-se">
-    </article>
+    </form>
 </body>
 </html>
