substiruindo na tipo de função L73

--- a/ExercicioFormulario/index.html
+++ b/ExercicioFormulario/index.html
@@ -70,7 +70,8 @@
        name="endereco"
        placeholder="Endereço Completo">
        
-       <input type="button" class="botao" value="Inscrever-se">
+   <input type="submit" class="botao" value="Inscrever-se"> <!-- Botão de inscrição -->
+       
     </form>
 </body>
 </html>
