alteração tipo função L56

--- a/ExercicioFormulario/index.html
+++ b/ExercicioFormulario/index.html
@@ -53,7 +53,7 @@
         >Telefone
         </label>
 
-        <input type="text"
+        <input type="tel"
         class="formulario_campo"
         name="telefone"
         placeholder="Telefone Fixo">
