L11 complemento de Form

--- a/ExercicioFormulario/index.html
+++ b/ExercicioFormulario/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form class="formulario">
+    <form class="formulario" action="#" method="post">
         <h1 class="texto_formulario">Seja Sócio </h1> <!--Nome do formulario -->
 <!-- Campo Nome -->
         <label 
