--- a/ExercicioFormulario/index.html
+++ b/ExercicioFormulario/index.html
@@ -16,7 +16,7 @@
         class="esconder"
         >Nome
         </label>
-
+<!-- campo de digitação nome -->
         <input type="text"
         class="formulario_campo"
         name="nome"
@@ -29,7 +29,7 @@
         class="esconder"
         >E-mail
         </label>
-
+<!-- campo de digitação e-mail -->
         <input type="email"
         class="formulario_campo"
         name="email"
@@ -42,7 +42,7 @@
         class="esconder"
         >Celular
         </label>
-
+<!-- campo de digitação celular -->
         <input type="text"
         class="formulario_campo"
         name="celular"
@@ -55,7 +55,7 @@
         class="esconder"
         >Telefone
         </label>
-
+<!-- campo de digitação telefone -->
         <input type="tel"
         class="formulario_campo"
         name="telefone"
@@ -68,7 +68,7 @@
        class="esconder"
        >Endereço
        </label>
-
+<!-- campo de digitação enderaço -->
        <input type="text"
        class="formulario_campo"
        name="endereco"
