--- a/LOVT/index.html
+++ b/LOVT/index.html
@@ -15,45 +15,38 @@
             <img class="c-vector" src="img/Vector.svg" alt="Vector">
         </header>
     <main>
-        <div class="l-banner">
-             <!--<img src="img/desing arquitetura.png" alt="desing_arquitetura.png">-->
-            <div class="c-circle_button_E"><img class="c-vector_E" src="img/VectorSetaE.svg" alt="Vector_E"></div>
-            <div class="c-circle_button_D"><img class="c-vector_D" src="img/VectorSetaD.svg" alt="Vector_D"></div> 
+        <div>
+            <img class="l-banner" src="img/Rectangle 3.svg" alt="desing_arquitetura.png">
         </div>
-        <article class="l-anuncio">
-            <!-- <img  class="l-img" src="img/desing arquitetura2.png" alt="desing arquitetura2.png">-->
-            <div class="l-box">
+        <div>
+        <article class="l-anuncio_1">
+            <img  class="l-img" src="img/Rectangle 6.svg" alt="desing arquitetura2.png">
+            <div>
             <h2 class="l-preco">$1,200</h2>
-            <h3 class="l-status">New</h3> 
+            <h3 id="status_a" class="l-status">New</h3> 
             <p class="l-descricao">Mussum Ipsum, cacilds vidis litro abertis. Delegadis gente finis, bibendum egestas augue arcu ut est. Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Casamentiss faiz malandris se pirulitá. Cevadis im ampola pa</p>
             </div>
         </article>
-        <article class="l-anuncio">
-            <!-- <img  class="l-img" src="img/desing arquitetura3.png" alt="desing arquitetura3.png"> -->
-            <div class="l-box">
+        <article class="l-anuncio_2">
+            <img  class="l-img" src="img/Rectangle 7.svg" alt="desing arquitetura3.png">
+            <div>
             <h2 class="l-preco">$2,000</h2>
-            <h3 class="l-status">Sale</h3> 
+            <h3 id="status_b" class="l-status">Sale</h3> 
             <p class="l-descricao">Mussum Ipsum, cacilds vidis litro abertis. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. Nullam volutpat risus nec leo commodo, ut interdum diam laoreet.</p>
             </div>
+        </div>
         </article>
     </main>
     <aside>
         <h1 class="l-h1">Your Style</h1>
-        <div class="l-modelo">
-            <img class="l-img_modelo" src="img/img_indutrial.png" alt="modelos industriais">
-            <h1 class="l-text_modelo">Industrial</h1>
-        </div>
-        <div class="l-modelo">
-            <img class="l-img_modelo" src="img/img_mordeno.png" alt="modelos modernos">
-            <h1 class="l-text_modelo">Modern</h1>
-        </div>
-        <div class="l-modelo">
-             <img class="l-img_modelo" src="img/img_classico.png" alt="modelos classicos">
-            <h1 class="l-text_modelo">Classic</h1>
+        <div>
+            <img class="l-img_modelo1" src="img/Rectangle 14.svg" alt="">
+            <img class="l-img_modelo2" src="img/Rectangle 15.svg" alt="">
+            <img class="l-img_modelo3" src="img/Rectangle 16 (1).svg" alt="">
         </div>
     </aside>
     <footer>
-            <img class="l-gps" src="img/gps_lovt.png" alt="localização">
+            <img class="l-gps" src="img/image 1 (1).svg" alt="localização">
             <p class="l-endereco">LOVT - You love, your loft !  
                 Broad St,
                 Newark, NJ 07102 - USA
